--- a/Asociačné_pravidlá.ipynb
+++ b/Asociačné_pravidlá.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_89066/665045608.py:1: DeprecationWarning: \n",
+      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_96564/665045608.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -564,7 +564,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_89066/3647075269.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_96564/3647075269.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -588,11 +588,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_89066/1893360737.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_96564/1893360737.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df[\"manželstvo\"] = df[\"manželstvo\"].replace({\"No\":0, \"Yes\":1})\n",
-      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_89066/1893360737.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_96564/1893360737.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df[\"fajcenie\"] = df[\"fajcenie\"].replace({\"Unknown\":0, \"smokes\":1, \"formerly smoked\":2, \"never smoked\":3 })\n",
-      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_89066/1893360737.py:6: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_96564/1893360737.py:6: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df[\"typ_rezidencie\"] = df[\"typ_rezidencie\"].replace({\"Urban\":0, \"Rural\":1})\n"
      ]
     }
@@ -874,45 +874,58 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rozdelenie dát na trénovaciu a testovaciu časť (70:30)\n",
+    "x = df[[\"pohlavie\", \"vek\", \"krvny_tlak\", \"srdcova_choroba\", \"manželstvo\", \"priemerna_hladina_glukozy\", \"fajcenie\", \"typ_prace\", \"typ_rezidencie\"]]\n",
+    "y = df[\"mrtvica\"]\n",
+    "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size=0.3,random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "    support                     itemsets\n",
-      "0  0.586106                   (pohlavie)\n",
-      "1  0.991585                        (vek)\n",
-      "2  0.097456                 (krvny_tlak)\n",
-      "3  0.054012            (srdcova_choroba)\n",
-      "4  0.656164                 (manželstvo)\n",
-      "5  0.427593                  (typ_prace)\n",
-      "6  0.491977             (typ_rezidencie)\n",
-      "7  0.993738  (priemerna_hladina_glukozy)\n",
-      "8  1.000000                        (bmi)\n",
-      "9  0.697847                   (fajcenie)\n"
+      "0  0.579536                   (pohlavie)\n",
+      "1  0.992172                        (vek)\n",
+      "2  0.098406                 (krvny_tlak)\n",
+      "3  0.053676            (srdcova_choroba)\n",
+      "4  0.659212                 (manželstvo)\n",
+      "5  0.993570  (priemerna_hladina_glukozy)\n",
+      "6  0.696673                   (fajcenie)\n",
+      "7  0.427453                  (typ_prace)\n",
+      "8  0.497065             (typ_rezidencie)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_89066/3314852128.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  df_binary = df.applymap(lambda x: 1 if x else 0)\n",
+      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_96564/271204226.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  x_train_binary = x_train.applymap(lambda x: 1 if x else 0)\n",
       "/opt/homebrew/lib/python3.11/site-packages/mlxtend/frequent_patterns/fpcommon.py:109: DeprecationWarning: DataFrames with non-bool types result in worse computationalperformance and their support might be discontinued in the future.Please use a DataFrame with bool type\n",
       "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "# prevod na binárne hodnoty - nevyhnutné, kvôli aplikácií algoritmu Apriori\n",
-    "df_binary = df.applymap(lambda x: 1 if x else 0)\n",
+    "# Prevod trénovacích dát na binárne hodnoty\n",
+    "x_train_binary = x_train.applymap(lambda x: 1 if x else 0)\n",
     "\n",
-    "# generovanie častých množín\n",
-    "frequent_itemsets = apriori(df_binary, min_support=0.01, use_colnames=True) \n",
+    "# Generovanie častých množín\n",
+    "frequent_itemsets = apriori(x_train_binary, min_support=0.01, use_colnames=True)\n",
     "\n",
-    "# generovanie asociačných pravidiel\n",
+    "# Generovanie asociačných pravidiel\n",
     "rules = association_rules(frequent_itemsets, metric=\"confidence\", min_threshold=0.8)\n",
-    "print(frequent_itemsets.head(10))"
+    "\n",
+    "# Výpis prvých 10 častých množín\n",
+    "print(frequent_itemsets.head(9))"
    ]
   }
  ],
