--- a/Asociačné_pravidlá.ipynb
+++ b/Asociačné_pravidlá.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_96564/665045608.py:1: DeprecationWarning: \n",
+      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_97787/665045608.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -564,7 +564,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_96564/3647075269.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_97787/3647075269.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -588,11 +588,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_96564/1893360737.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_97787/1893360737.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df[\"manželstvo\"] = df[\"manželstvo\"].replace({\"No\":0, \"Yes\":1})\n",
-      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_96564/1893360737.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_97787/1893360737.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df[\"fajcenie\"] = df[\"fajcenie\"].replace({\"Unknown\":0, \"smokes\":1, \"formerly smoked\":2, \"never smoked\":3 })\n",
-      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_96564/1893360737.py:6: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_97787/1893360737.py:6: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df[\"typ_rezidencie\"] = df[\"typ_rezidencie\"].replace({\"Urban\":0, \"Rural\":1})\n"
      ]
     }
@@ -737,7 +737,7 @@
    "outputs": [],
    "source": [
     "# všetky atribúty datasetu\n",
-    "cols = [\"pohlavie\", \"vek\", \"krvny_tlak\", \"srdcova_choroba\", \"manželstvo\", \"priemerna_hladina_glukozy\", \"fajcenie\", \"typ_prace\", \"typ_rezidencie\"]"
+    "cols = [\"pohlavie\", \"vek\", \"krvny_tlak\", \"srdcova_choroba\", \"manželstvo\", \"priemerna_hladina_glukozy\", \"fajcenie\", \"typ_prace\", \"typ_rezidencie\", \"bmi\"]"
    ]
   },
   {
@@ -775,6 +775,7 @@
        "      <th>fajcenie</th>\n",
        "      <th>typ_prace</th>\n",
        "      <th>typ_rezidencie</th>\n",
+       "      <th>bmi</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -789,6 +790,7 @@
        "      <td>0.666667</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.298851</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -801,6 +803,7 @@
        "      <td>1.000000</td>\n",
        "      <td>0.25</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.206897</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -813,6 +816,7 @@
        "      <td>1.000000</td>\n",
        "      <td>0.00</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.252874</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -825,6 +829,7 @@
        "      <td>0.333333</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.275862</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -837,6 +842,7 @@
        "      <td>1.000000</td>\n",
        "      <td>0.25</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.160920</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -850,12 +856,12 @@
        "3       0.5  0.597561         0.0              0.0         1.0   \n",
        "4       0.5  0.963415         1.0              0.0         1.0   \n",
        "\n",
-       "   priemerna_hladina_glukozy  fajcenie  typ_prace  typ_rezidencie  \n",
-       "0                   0.800926  0.666667       0.00             0.0  \n",
-       "1                   0.680556  1.000000       0.25             1.0  \n",
-       "2                   0.231481  1.000000       0.00             1.0  \n",
-       "3                   0.537037  0.333333       0.00             0.0  \n",
-       "4                   0.550926  1.000000       0.25             1.0  "
+       "   priemerna_hladina_glukozy  fajcenie  typ_prace  typ_rezidencie       bmi  \n",
+       "0                   0.800926  0.666667       0.00             0.0  0.298851  \n",
+       "1                   0.680556  1.000000       0.25             1.0  0.206897  \n",
+       "2                   0.231481  1.000000       0.00             1.0  0.252874  \n",
+       "3                   0.537037  0.333333       0.00             0.0  0.275862  \n",
+       "4                   0.550926  1.000000       0.25             1.0  0.160920  "
       ]
      },
      "execution_count": 17,
@@ -877,7 +883,7 @@
    "outputs": [],
    "source": [
     "# rozdelenie dát na trénovaciu a testovaciu časť (70:30)\n",
-    "x = df[[\"pohlavie\", \"vek\", \"krvny_tlak\", \"srdcova_choroba\", \"manželstvo\", \"priemerna_hladina_glukozy\", \"fajcenie\", \"typ_prace\", \"typ_rezidencie\"]]\n",
+    "x = df[[\"pohlavie\", \"vek\", \"krvny_tlak\", \"srdcova_choroba\", \"manželstvo\", \"priemerna_hladina_glukozy\", \"fajcenie\", \"typ_prace\", \"typ_rezidencie\", \"bmi\"]]\n",
     "y = df[\"mrtvica\"]\n",
     "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size=0.3,random_state=1)"
    ]
@@ -888,9 +894,20 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_97787/1606765256.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  x_train_binary = x_train.applymap(lambda x: 1 if x else 0)\n",
+      "/opt/homebrew/lib/python3.11/site-packages/mlxtend/frequent_patterns/fpcommon.py:109: DeprecationWarning: DataFrames with non-bool types result in worse computationalperformance and their support might be discontinued in the future.Please use a DataFrame with bool type\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "----------------------------------------\n",
       "    support                     itemsets\n",
       "0  0.579536                   (pohlavie)\n",
       "1  0.992172                        (vek)\n",
@@ -900,17 +917,9 @@
       "5  0.993570  (priemerna_hladina_glukozy)\n",
       "6  0.696673                   (fajcenie)\n",
       "7  0.427453                  (typ_prace)\n",
-      "8  0.497065             (typ_rezidencie)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/lc/0tq3t3m97j18yp2pgzc9h2vw0000gn/T/ipykernel_96564/271204226.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  x_train_binary = x_train.applymap(lambda x: 1 if x else 0)\n",
-      "/opt/homebrew/lib/python3.11/site-packages/mlxtend/frequent_patterns/fpcommon.py:109: DeprecationWarning: DataFrames with non-bool types result in worse computationalperformance and their support might be discontinued in the future.Please use a DataFrame with bool type\n",
-      "  warnings.warn(\n"
+      "8  0.497065             (typ_rezidencie)\n",
+      "9  0.999720                        (bmi)\n",
+      "----------------------------------------\n"
      ]
     }
    ],
@@ -925,7 +934,9 @@
     "rules = association_rules(frequent_itemsets, metric=\"confidence\", min_threshold=0.8)\n",
     "\n",
     "# Výpis prvých 10 častých množín\n",
-    "print(frequent_itemsets.head(9))"
+    "print(\"----------------------------------------\")\n",
+    "print(frequent_itemsets.head(10))\n",
+    "print(\"----------------------------------------\")"
    ]
   }
  ],
